# batllori-and-propagator

./: .gitignore  AGENTS.md  README.md  batllori.py  batllori_4cl.py  batllori_6cl.py  data.py  extract_probabilities.py  main.py  model.py  notebook.py  propagator_module.py  pyproject.toml  report.md
data/: clc_1990.tif  clc_2000.tif  clc_2006.tif  clc_2012.tif  extreme_events.csv  extreme_events_daily_max.csv  susc_monti_pisani.tif
