[project]
name = "fire-and-fuel-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib==3.10.0",
    "notebook>=7.4.2",
    "numpy==2.2.2",
    "openai>=2.6.1",
    "propagator[io]",
    "rasterio>=1.4.3",
]

[tool.uv.sources]
propagator = { git = "https://github.com/CIMAFoundation/propagator_sim.git" }

[dependency-groups]
dev = [
    "marimo[mcp]>=0.17.2",
]
