[project]
name = "fire-and-fuel-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "openai>=2.6.1",
    "rasterio>=1.4.3",
    "marimo[mcp]>=0.17.3",
    "propagator[io]",
]

[dependency-groups]
dev = [
        "notebook>=7.4.7",
        "ipykernel>=7.1.0",
]

[tool.uv.sources]
propagator = { git = "https://github.com/CIMAFoundation/propagator_sim" }
